--- a/css/styles.css
+++ b/css/styles.css
@@ -621,7 +621,7 @@ h1, фон #ffffff;
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
-        margin-right: 12px;
+        margin-right: 8px;
         outline: none;
       transition: border-color var(--time-duration) var(--timing-function);
     }
@@ -637,25 +637,26 @@ h1, фон #ffffff;
     .sign-container:focus {
         border-color: var(--accent-color);
     }
-
+    .container-adress {
+        flex-grow: 1;
+    }
     .text-sign {
-        position: absolute;
-        right: 0;
+        display: inline-flex;
         color: #ffffff;
         background-color: var(--accent-color);
-        width: 200px;
-        height: 50px;
-       
+        padding: 10px 28px;
+        border: transparent;
         font-size: 16px;
         font-weight: 700;
         line-height: 1.875;
         letter-spacing: 0.06em;
         text-align: center;
         justify-content: center;
+        align-items: center;
     }
     
     .icon-sign {
-        margin-right: 10px;
+        margin-left: 10px;
        
         align-items: center;
         justify-content: center;
@@ -729,8 +730,8 @@ h1, фон #ffffff;
 
         transition: box-shadow var(--time-duration) var(--timing-function);
     }
-    .project-link:hover.project-link,
-    .project-link:focus.project-link {
+    .project-link:hover,
+    .project-link:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);    
     }
     .project-link-title {
@@ -779,8 +780,8 @@ h1, фон #ffffff;
         transition: transform var(--time-duration) var(--timing-function);
     }
 
-    .project-item:hover .project-action,
-    .project-item:focus .project-action {
+    .project-link:hover .project-action,
+    .project-link:focus .project-action {
         transform: translateY(0);
 
     }
@@ -818,7 +819,7 @@ h1, фон #ffffff;
         position: absolute;
         top: 50%;
         left: 50%;
-        
+        padding: 40px;
 
         width: 528px;
         height: 581px;
@@ -862,10 +863,7 @@ h1, фон #ffffff;
         fill: var(--accent-color);
     }
     .modal-title {
-        
-        margin-top: 40px;
-        
-
+        margin-bottom: 12px;
         font-weight: 700;
         font-size: 20px;
         line-height: 1.15;     
@@ -873,13 +871,18 @@ h1, фон #ffffff;
         color: var(--title-color);
     }
     .modal-label {
+        display: block;
         margin-bottom: 4px;
+        
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.01em;
+        color: var(--text-color);
     }
 
-    .form-field {
-        margin-right: 40px;
-        margin-left: 40px;
-        margin-top: 12px;
+    .form-field + .form-field{
+        
+        margin-top: 10px;
         color: var(--text-color);
       }
 
@@ -901,11 +904,15 @@ h1, фон #ffffff;
       left: 12px;
         
       }
+      .form-field.agreement {
+          margin-top: 20px;
+      }
+
       .agreement {
         /* display: flex; */
         justify-content: center;
         /* align-items: center;     */
-
+        
         line-height: 1.71;
           
 
@@ -921,13 +928,14 @@ h1, фон #ffffff;
         letter-spacing: 0.06em;
         cursor: pointer;
         border-radius: 4px;
-    
+        border: transparent;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
            
         min-width: 200px;
         min-height: 50px;
         margin-top: 30px;
-        margin-left: 164px;
+        margin-left: auto;
+        margin-right: auto;
         padding: 10px;
         display: flex;
         justify-content: center;
@@ -967,7 +975,8 @@ h1, фон #ffffff;
       transition: fill var(--time-duration) var(--timing-function), border-color var(--time-duration) var(--timing-function);
       }
 
-      .modal-input:focus {
+      .modal-input:focus,
+      .modal-text:focus {
         border-color: var(--accent-color);
       }
 
@@ -980,7 +989,7 @@ h1, фон #ffffff;
       letter-spacing: 0.01em;
       color: rgba(117, 117, 117, 0.5);
       border: 1px solid rgba(33, 33, 33, 0.2);
-      
+      display: block;
       border-radius: 4px;
       width: 100%;
       height: 120px;
@@ -991,36 +1000,4 @@ h1, фон #ffffff;
     .modal-text::placeholder {
         color: rgba(117, 117, 117, 0.5);
     }
-    .send-modal-icon {
-        
-        position: absolute;
-        bottom: 40px;
-        left: 164px;
-        width: 200px;
-        height: 50px;    
-        border: transparent;
-        border-radius: 4px;
-        
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.875;
-        color: #ffffff;
-        background-color: var(--accent-color);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-    }
     
-    .send-modal-text {
-
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 1.15;
-        text-align: center;
-        
-        color: var(--nav-color);
-        
-    }
